--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "smiles"
   ],
   "activationEvents": [
-    "onLanguage:selfies"
+    "onLanguage:selfies",
+    "onCommand:selfies.showMolecule",
+    "onCommand:selfies.togglePreview"
   ],
   "main": "./src/extension.js",
   "contributes": {
@@ -87,6 +89,7 @@
     "lint": "eslint src"
   },
   "dependencies": {
+    "@rdkit/rdkit": "^2025.3.4-1.0.0",
     "selfies-js": "^0.1.0"
   },
   "devDependencies": {
