--- a/.vscodeignore
+++ b/.vscodeignore
@@ -17,3 +17,31 @@ node_modules/@rdkit/**
 *.sh
 SETUP.md
 OVERVIEW.md
+convert-icon.js
+icon.svg
+
+# Build and test artifacts
+test/**
+*.test.js
+*.spec.js
+
+# Git and CI
+.git/**
+.github/**
+.gitattributes
+
+# Editor directories
+.idea/**
+.DS_Store
+
+# Temporary files
+*.log
+npm-debug.log*
+
+# Source maps
+*.map
+
+# Sharp (used only for icon conversion during build)
+node_modules/sharp/**
+node_modules/@img/**
+node_modules/detect-libc/**
