--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "onCommand:selfies.showMolecule",
     "onCommand:selfies.togglePreview"
   ],
-  "main": "./src/extension.js",
+  "main": "./dist/extension.js",
   "contributes": {
     "languages": [
       {
@@ -93,8 +93,9 @@
   },
   "scripts": {
     "vscode:prepublish": "npm run package",
-    "package": "node ./build.js",
-    "watch": "node ./build.js --watch",
+    "compile": "node esbuild.js",
+    "package": "node esbuild.js --production",
+    "watch": "node esbuild.js --watch",
     "lint": "eslint src"
   },
   "dependencies": {
@@ -104,6 +105,7 @@
   "devDependencies": {
     "@types/vscode": "^1.85.0",
     "@vscode/test-electron": "^2.3.8",
+    "esbuild": "^0.27.2",
     "eslint": "^8.56.0",
     "sharp": "^0.34.5"
   },
