--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "selfies-lang",
   "displayName": "SELFIES Language Support",
   "description": "Complete language support for SELFIES molecular notation with DSL, syntax highlighting, live preview, and molecular structure visualization",
-  "version": "0.1.0",
-  "publisher": "souradeepnanda",
+  "version": "0.1.2",
+  "publisher": "ghost---shadow",
   "engines": {
     "vscode": "^1.85.0"
   },
