--- a/package.json
+++ b/package.json
@@ -100,7 +100,7 @@
   },
   "dependencies": {
     "@rdkit/rdkit": "^2025.3.4-1.0.0",
-    "selfies-js": "0.1.3"
+    "selfies-js": "^0.1.3"
   },
   "devDependencies": {
     "@types/vscode": "^1.85.0",
