--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "selfies-lang",
   "displayName": "SELFIES Language Support",
   "description": "Complete language support for SELFIES molecular notation with DSL, syntax highlighting, live preview, and molecular structure visualization",
-  "version": "0.1.3",
+  "version": "0.2.0",
   "publisher": "ghost---shadow",
   "engines": {
     "vscode": "^1.85.0"
@@ -100,7 +100,7 @@
   },
   "dependencies": {
     "@rdkit/rdkit": "^2025.3.4-1.0.0",
-    "selfies-js": "^0.1.3"
+    "selfies-js": "file:../selfies-js"
   },
   "devDependencies": {
     "@types/vscode": "^1.85.0",
