--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "selfies-lang",
   "displayName": "SELFIES Language Support",
   "description": "Complete language support for SELFIES molecular notation with DSL, syntax highlighting, live preview, and molecular structure visualization",
-  "version": "0.3.0",
+  "version": "0.3.1",
   "publisher": "ghost---shadow",
   "engines": {
     "vscode": "^1.85.0"
@@ -110,7 +110,8 @@
     "compile": "node esbuild.js",
     "package": "node esbuild.js --production",
     "watch": "node esbuild.js --watch",
-    "lint": "eslint src"
+    "lint": "eslint src",
+    "test": "bun test"
   },
   "dependencies": {
     "@rdkit/rdkit": "^2025.3.4-1.0.0",
